syntax = "proto3";

package metrics;

option java_package = "com.proto.metrics";
option java_multiple_files = true;

message MetricsData {
    double nonHeapMemoryTotalUsed = 1;

   message BUFFERPOOLS {
      double totalCapacity = 1;
      string name = 2;
      double count = 3;
      double memoryUsed = 4;
   }

   repeated BUFFERPOOLS bufferPools = 2;
    double heapMemoryTotalUsed = 3;
    string graphiteSchema = 4;
    string profiler = 5;
    double epochMillis = 6;
    double nonHeapMemoryCommitted = 7;
    double heapMemoryCommitted = 8;

   message MEMORYPOOLS {
      double peakUsageMax = 1;
      double usageMax = 2;
      double peakUsageUsed = 3;
      string name = 4;
      double peakUsageCommitted = 5;
      double usageUsed = 6;
      string type = 7;
      double usageCommitted = 8;
   }

   repeated MEMORYPOOLS memoryPools = 9;
    double processCpuLoad = 10;
    double systemCpuLoad = 11;
    double processCpuTime = 12;

    string appId = 13;
    string name = 14;
    string host = 15;
    string processUuid = 16;

   message GC {
      double collectionTime = 1;
      string name = 2;
      double collectionCount = 3;
   }

   repeated GC gc = 17;
}

message StackTrace {
  repeated string stacktrace = 1;
  double endEpoch = 2;
  string appId = 3;
  string graphiteSchema = 4;
  string profiler = 5;
  string host = 6;
  string name = 7;
  string processUuid = 8;
  string threadState = 9;
  double count = 10;
  double startEpoch = 11;
  string threadName = 12;
}


message MetricsResponse {
    string results = 1;
}

service MetricsService {

    rpc Metrics(stream MetricsData) returns (MetricsResponse) {};
    rpc Stacktrace(stream StackTrace) returns (MetricsResponse) {};
}